Added debug mode build to Makefile script
`make debug`로 빌드하면, DEBUG 매크로가 정의된채 컴파일되고
디버그 정보가 같이 만들어짐

--- a/example/Makefile
+++ b/example/Makefile
@@ -7,6 +7,14 @@ LIBS = -lboost_system
 
 
 # Makefile scripts
+all: release
+
+debug: CPPFLAGS += -DDEBUG -g
+debug: $(TARGET)
+
+release: CPPFLAGS += -O3
+release: $(TARGET)
+
 $(TARGET): main.cpp types.h helpers.h
 	$(CPP) $< -o $@ $(CPPFLAGS) $(LIBS)
 
