Added coroutine instead of class 'connection'
'connection' 클래스를 삭제하고, 그 대신 같은 역할을 하는
코루틴을 만들어 server 클래스 안에 람다함수로 집어넣음

--- a/example/Makefile
+++ b/example/Makefile
@@ -3,7 +3,7 @@ TARGET=example
 
 CPP = clang++
 CPPFLAGS = -Wall -std=c++1y
-LIBS = -lboost_system
+LIBS = -lboost_system -lboost_coroutine
 
 
 # Makefile scripts
